@@ -564,8 +564,8 @@ static Int get_otrack_shadow_offset_wrk ( Int offset, Int szB )
    if (o == GOF(IP_AT_SYSCALL) && sz == 8) return -1; /* slot unused */
    if (o == GOF(IDFLAG)  && sz == 8) return -1; /* slot used for %DH */
    if (o == GOF(ACFLAG)  && sz == 8) return -1; /* slot unused */
-   if (o == GOF(FS_ZERO) && sz == 8) return -1; /* slot unused */
-   if (o == GOF(GS_0x60) && sz == 8) return -1; /* slot unused */
+   if (o == GOF(FS_CONST) && sz == 8) return -1; /* slot unused */
+   if (o == GOF(GS_CONST) && sz == 8) return -1; /* slot unused */
    if (o == GOF(CMSTART) && sz == 8) return -1; /* slot unused */
    if (o == GOF(CMLEN)   && sz == 8) return -1; /* slot unused */
    if (o == GOF(NRADDR)  && sz == 8) return -1; /* slot unused */
